@@ -65,6 +65,7 @@ mm_TESTS = \
   contrib/mm/tests/LT_SP_multi-word_LO_SJ_works.sh \
   contrib/mm/tests/MT_5_includes_AT_in_SG.sh \
   contrib/mm/tests/ms_cover_sheet_robust_to_missing_AF.sh \
+  contrib/mm/tests/mse_has-sufficient-footnote-space.sh \
   contrib/mm/tests/place-equation-labels-correctly-in-displays.sh \
   contrib/mm/tests/remove-stale-bib-entry-data.sh \
   contrib/mm/tests/short-pages-do-not-overflow-stack.sh
