@@ -1,3 +1,10 @@
+2022-11-21  G. Branden Robinson <g.branden.robinson@gmail.com>
+
+	Regression-test Savannah #63398.
+
+	* tests/mse_has-sufficient-footnote-space.sh: Do it.
+	* mm.am (mm_TESTS): Run test.
+
 2022-10-09  G. Branden Robinson <g.branden.robinson@gmail.com>
 
 	[mm]: Add `--version` option support to mmroff.
